--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,15 +2,19 @@
 @import 'grid';
 
 .head {
-  overflow: hidden;
-  background: url('../assets/Background_Header.svg') no-repeat center bottom;
+  background: url('../assets/Background_Header.jpg') no-repeat;
   background-size: contain;
+  height: 318px;
+  width: 100%;
 }
 .foot {
-  background-image: url(../assets/Background_Footer.svg) no-repeat;
-  background-size: cover;
-  background-position: center;
+  background: url('../assets/Background_Footer.jpg')no-repeat;
+  background-size: contain;
+  height: 140px;
+  width: 100%;
 }
 .body {
-  background-image: url(../assets/Background_Body.svg) no-repeat;
+  background: url('../assets/Background_Body.jpg');
+  background-size: cover;
+  width: 100%;
 }
