--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -8,24 +8,54 @@ html {
   font-family: 'Permanent Marker', cursive;
 }
 .center {
-  position: relative;
-  top: 50%;
-  transform: translateX(50%);
+  text-align: center;
 }
-.head {
-  background: url('../assets/Background_Header.jpg') no-repeat;
-  background-size: contain;
-  height: 320px;
-  width: 100%;
+h1 {
+  margin: 2% 2%;
 }
-.foot {
-  background: url('../assets/Background_Footer.jpg')no-repeat;
-  background-size: contain;
-  height: 140px;
-  width: 100%;
+
+/* Mobile Landscape Screen Sizes */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .head,
+  .foot {
+    display: none;
+  }
+
+  .col-3,
+  .col-3-6,
+  .col-6 {
+    flex: 0 0 44%;
+  }
+
+  .col-9,
+  .col-3-9,
+  .col-6-3,
+  .col-12 {
+    flex: 0 0 92%;
+  }
 }
-.body {
-  background: url('../assets/Background_Body.jpg');
-  background-size: cover;
-  width: 100%;
+/* Desktop screen Sizes */
+@media only screen and (min-width: 768px) {
+  .head {
+    background: url('../assets/Background_Header.jpg') no-repeat;
+    background-size: contain;
+    height: 320px;
+    width: 100%;
+  }
+  .foot {
+    background: url('../assets/Background_Footer.jpg')no-repeat;
+    background-size: contain;
+    height: 140px;
+    width: 100%;
+  }
+  .body {
+    background: url('../assets/Background_Body.jpg');
+    background-size: cover;
+    width: 100%;
+  }
+  .center {
+    position: relative;
+    top: 50%;
+    transform: translateX(50%);
+  }
 }
