--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -14,6 +14,9 @@ html {
   display: block;
   margin: 0 auto;
 }
+.bottom {
+  vertical-align: bottom;
+}
 .inherit {
   width: 100%;
 }
@@ -48,7 +51,6 @@ h1 {
     justify-content: center;
     background: url('../assets/Background_Header.jpg') no-repeat;
     background-size: cover;
-    height: 320px;
     width: 100%;
   }
   .foot {
@@ -57,13 +59,7 @@ h1 {
     height: 108px;
     width: 100%;
   }
-  .body {
-    background: url('../assets/Background_Body.jpg');
-    background-size: cover;
-    width: 100%;
-  }
-  .center {
-    position: relative;
-    top: 50%;
+  .pushdown {
+    margin-top: 11%;
   }
 }
