--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,6 +7,9 @@
 html {
   font-family: 'Permanent Marker', cursive;
 }
+.phone-title {
+  display: block;
+}
 .center {
   text-align: center;
 }
@@ -26,6 +29,9 @@ h1 {
 
 /* Mobile Landscape Screen Sizes */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+  .phone-title {
+    display: block;
+  }
   .head {
     display: none;
   }
@@ -45,6 +51,9 @@ h1 {
 }
 /* Desktop screen Sizes */
 @media only screen and (min-width: 768px) {
+  .phone-title {
+    display: none;
+  }
   .head {
     display: flex;
     flex-flow: row wrap;
