--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -10,7 +10,10 @@ html {
   font-family: 'Permanent Marker', cursive;
   color: #333;
 }
-
+a:link {
+  color: #22328e;
+  text-decoration: none;
+}
 .center {
   text-align: center;
 }
